#Copyright (c) 2023 Huawei Device Co., Ltd.
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("NotoSansMyanmar") {
  source = "fonts/NotoSansMyanmar/googlefonts/variable-ttf/NotoSansMyanmar[wdth,wght].ttf"
  module_install_dir = "fonts"
  subsystem_name = "thirdparty"
  part_name = "notofonts"
}

ohos_prebuilt_etc("NotoSansThai") {
  source = "fonts/NotoSansThai/googlefonts/variable-ttf/NotoSansThai[wdth,wght].ttf"
  module_install_dir = "fonts"
  subsystem_name = "thirdparty"
  part_name = "notofonts"
}

ohos_prebuilt_etc("NotoSansLao") {
  source = "fonts/NotoSansLao/googlefonts/variable-ttf/NotoSansLao[wdth,wght].ttf"
  module_install_dir = "fonts"
  subsystem_name = "thirdparty"
  part_name = "notofonts"
}

ohos_prebuilt_etc("NotoSansKhmer") {
  source = "fonts/NotoSansKhmer/googlefonts/variable-ttf/NotoSansKhmer[wdth,wght].ttf"
  module_install_dir = "fonts"
  subsystem_name = "thirdparty"
  part_name = "notofonts"
}

group("fonts_notofonts") {
  deps = [
    ":NotoSansKhmer",
    ":NotoSansLao",
    ":NotoSansMyanmar",
    ":NotoSansThai",
  ]
}
